[package]
name = "tavily-anet-mcp"
version = "0.1.0"
edition = "2024"

[dependencies]
anet_mcp_server = { path = "../anet-mcp-server" }
anyhow = "1.0"
async-nats = "0.32.0"  # Added this dependency
async-trait = "0.1"
dotenv = "0.15"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
futures-util = "0.3"

[[example]]
name = "test_client"
path = "examples/test_client.rs"
